# py-pii-crypto

./: .gitignore  CHANGELOG.md  Dockerfile  pyproject.toml  pytest-report.html  pytest.ini  readMe.md
.github/workflows/: ci.yml  release.yml
examples/: aliases.json  dec.csv  dec.csv.metadata.json  enc.csv  enc.csv.metadata.json  input_test.csv  keys.json  local_provider.json  unified_local_provider.json  validation_config.json
learnings/: GH_Actions.md  aes_gcm.md  docker_containerization.md  docker_data_persistence.md  encryption_schemes.md  factory_vs_facade.md  pycryptodome.md  pydantic._examples.ipynb  pydantic_examples.md  semantic_versioning.md  why_multi_stage_dockerfile.md  why_use_metadata_manager.md
src/: cli.py  decryptor.py  encryptor.py  helpers.py  key_manager.py
src/pii_crypto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/piicrypto/: cli.py
src/piicrypto/encrypt_decrypt/: decryptor.py  encryptor.py
src/piicrypto/helpers/: create_dynamic_model.py  logger_helper.py  provider_config_parser.py  utils.py
src/piicrypto/key_provider/: base_key_provider.py  key_manager.py  key_provider_factory.py  local_key_provider.py  vault_key_provider.py
tests/: conftest.py
tests/integration/: test_encrypt_decrypt_csv.py
tests/unit/: test_encryptor_decryptor.py  test_provider_config_parser.py  test_utils.py
