[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-crypto"
version = "0.1.0"
description = "A CLI tool and library for PII encryption and decryption with field-level key management."
authors = [
  { name = "Avinash Pawar"}
]
readme = "readMe.md"
requires-python = ">=3.7"
dependencies = [
  "typer>=0.9.0",
  "pycryptodome>=3.18.0",
  "RapidFuzz>=3.13.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["piicrypto", "piicrypto.encrypt_decrypt", "piicrypto.helpers", "piicrypto.key_provider"]

[project.scripts]
pii-crypto = "piicrypto.cli:app"