[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-crypto"
version = "1.0.0"
description = "A CLI tool and library for PII encryption and decryption with field-level key management."
authors = [
  { name = "Avinash Pawar"}
]
readme = "readMe.md"
requires-python = ">=3.7"
dependencies = [
  "pip",
  "setuptools>=61.0",
  "typer>=0.9.0",
  "pycryptodome>=3.18.0",
  "RapidFuzz>=3.13.0",
  "pydantic>=2.11.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["piicrypto", "piicrypto.encrypt_decrypt", "piicrypto.helpers", "piicrypto.key_provider"]

[project.scripts]
pii-crypto = "piicrypto.cli:app"

[tool.semantic_release]
version_variable = [
  "pyproject.toml:project.version"
]
upload_to_pypi = true
build_command = "python -m build"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
commit_version_number = true

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"